--- a/notebooks/MATH60082 - Examples Sheet 7 - Crank Nicolson American Option.ipynb
+++ b/notebooks/MATH60082 - Examples Sheet 7 - Crank Nicolson American Option.ipynb
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,19 +227,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.129755"
+      "0.28397"
      ]
     }
    ],
    "source": [
-    "cout << americanPut_CN(2.5,X,T,r,sigma,iMax,jMax,SMax,1,1.e-6,1000);"
+    "cout << americanPut_CN(S0,X,T,r,sigma,iMax,jMax,SMax,1,1.e-6,1000);"
    ]
   },
   {
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -296,16 +296,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1minput_line_19:2:9: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mredefinition of 'valueOld'\u001b[0m\n",
+      " double valueOld=0;\n",
+      "\u001b[0;1;32m        ^\n",
+      "\u001b[0m\u001b[1minput_line_14:2:9: \u001b[0m\u001b[0;1;30mnote: \u001b[0mprevious definition is here\u001b[0m\n",
+      " double valueOld=0;\n",
+      "\u001b[0;1;32m        ^\n",
+      "\u001b[0m"
+     ]
+    },
+    {
+     "ename": "Interpreter Error",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "Interpreter Error: "
+     ]
+    }
+   ],
    "source": [
     "double valueOld=0;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +335,7 @@
      "output_type": "stream",
      "text": [
       " n    | V_n      | diff    | V_extrap  \n",
-      "20 | 0.255711 | 0.255711 | 0.340948\n",
+      "20 | 0.255711 | 0.109497 | 0.29221\n",
       "40 | 0.269349 | 0.0136377 | 0.273895\n",
       "80 | 0.272299 | 0.00295035 | 0.273283\n",
       "160 | 0.273077 | 0.000778094 | 0.273337\n",
