update some of the notebooks

--- a/notebooks/Loop Example.ipynb
+++ b/notebooks/Loop Example.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -75,6 +75,44 @@
     "        sum = sum + f(x);\n",
     "        std::cout << x << \" \" << sum << \"\\n\";\n",
     "        x = x + 0.1;\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9 24.7065\n",
+      "0.91 25.5346\n",
+      "0.92 26.381\n",
+      "0.93 27.2459\n",
+      "0.94 28.1295\n",
+      "0.95 29.032\n",
+      "0.96 29.9536\n",
+      "0.97 30.8945\n",
+      "0.98 31.8549\n",
+      "0.99 32.835\n"
+     ]
+    }
+   ],
+   "source": [
+    "{\n",
+    "    double x=0.;\n",
+    "    double sum = 0.;\n",
+    "    while(x<=1.)\n",
+    "    {\n",
+    "        sum = sum + f(x);\n",
+    "        if(x>0.9)\n",
+    "            std::cout << x << \" \" << sum << \"\\n\";\n",
+    "        x = x + 0.01;\n",
     "    }\n",
     "}"
    ]
