--- a/notebooks/MATH60082 - Examples Sheet 8 - Crank Nicolson Penalty Method.ipynb
+++ b/notebooks/MATH60082 - Examples Sheet 8 - Crank Nicolson Penalty Method.ipynb
@@ -59,6 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#include \"../include/doxygen_table.hpp\"\n",
     "#include <iostream>\n",
     "#include <vector>\n",
     "#include <chrono>\n",
@@ -307,23 +308,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " n    | V_n \n",
-      "20 | 1.47217\n",
-      "40 | 1.47464\n",
-      "80 | 1.47409\n",
-      "160 | 1.47467\n"
+      "|             n|           V_n|\n",
+      "|--------------|--------------|\n",
+      "|            20|       1.47217|\n",
+      "|            40|       1.47464|\n",
+      "|            80|       1.47409|\n",
+      "|           160|       1.47467|\n"
      ]
     }
    ],
    "source": [
-    "cout << \" n    | V_n \\n\";\n",
+    "MATH60082::tableRow(\"n\",\"V_n\");\n",
+    "MATH60082::emptyTableRow(2);\n",
     "for(int k=1;k<=4;k++)\n",
     "{\n",
     "    int n=10*pow(2,k);\n",
     "    iMax = n;\n",
     "    jMax = n;\n",
     "    double value = americanPut_CN(S0,X,T,r,sigma,iMax,jMax,SMax,1e6,1.e-6,1000);\n",
-    "    cout << n << \" | \" << value << \"\\n\";\n",
+    "    MATH60082::tableRow( n , value);\n",
     "}"
    ]
   },
@@ -339,7 +342,7 @@
     "\n",
     "So for the next example (with extrapolation) we use $S_0=X$, so that interpolation errors are removed and also increase $S_\\text{max}$ and the tolerance. The new exact value we are aiming for is\n",
     "$$\n",
-    "V_\\text{exact}(S=X=10,t=0) = 1.33676 .\n",
+    "V_\\text{exact}(S=X=10,t=0) = 1.36676 .\n",
     "$$"
    ]
   },
@@ -361,18 +364,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " n    | V_n      | diff    | V_extrap  \n",
-      "20 | 1.27856 | 1.27856 | 1.70474\n",
-      "40 | 1.34674 | 0.0681884 | 1.36947\n",
-      "80 | 1.3615 | 0.0147517 | 1.36641\n",
-      "160 | 1.36539 | 0.00389047 | 1.36668\n",
-      "320 | 1.36641 | 0.00102095 | 1.36675\n"
+      "|             n|           V_n|          diff|      V_extrap|\n",
+      "|--------------|--------------|--------------|--------------|\n",
+      "|            20|       1.27856|       1.27856|       1.70474|\n",
+      "|            40|       1.34674|     0.0681884|       1.36947|\n",
+      "|            80|        1.3615|     0.0147517|       1.36641|\n",
+      "|           160|       1.36539|    0.00389047|       1.36668|\n",
+      "|           320|       1.36641|    0.00102095|       1.36675|\n"
      ]
     }
    ],
    "source": [
     "S0 = X;\n",
-    "cout << \" n    | V_n      | diff    | V_extrap  \\n\";\n",
+    "MATH60082::tableRow(\"n\",\"V_n\",\"diff\",\"V_extrap\");\n",
+    "MATH60082::emptyTableRow(4);\n",
     "for(int k=1;k<=5;k++)\n",
     "{\n",
     "    int n=10*pow(2,k);\n",
@@ -380,9 +385,7 @@
     "    jMax = n;\n",
     "    double value = americanPut_CN(S0,X,T,r,sigma,iMax,jMax,5*X,1e8,1.e-8,1000);\n",
     "    double value_extrap = (4.*value - valueOld)/3.;\n",
-    "    cout << n << \" | \" << value << \" | \" ;\n",
-    "    cout << value - valueOld << \" | \";\n",
-    "    cout << value_extrap << \"\\n\";\n",
+    "    MATH60082::tableRow(n,value,value - valueOld,value_extrap);\n",
     "    valueOld = value;\n",
     "}"
    ]
@@ -393,20 +396,13 @@
    "source": [
     "Again we are able to get _quite_ smooth convergence although not quite as good as previously. This time the ratio of differences between the results is not perfect so the extrapolation doesn't perform quite as well. We are still able to improve our results though and the combination of $n=160$ and $n=320$ is able to give 5 almost 6s.f. of accuracy, whereas the standard method with $n=320$ gives only 3 or 4s.f. of accuracy."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
    "display_name": "C++14",
    "language": "C++14",
-   "name": "xeus-cling-cpp14"
+   "name": "xcpp14"
   },
   "language_info": {
    "codemirror_mode": "text/x-c++src",
