Add Lab Class 1 Solutions

--- a/notebooks/MATH60082 - Lab 1 - Tasks.ipynb
+++ b/notebooks/MATH60082 - Lab 1 - Tasks.ipynb
@@ -2,291 +2,446 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d05af543",
+   "id": "01ab067e",
    "metadata": {},
    "source": [
     "# Lab Class 1\n",
     "\n",
-    "## Tasks\n",
-    "\n",
-    "- Try out the following code in your main program, can you predict what will happen?\n",
-    "~~~\n",
-    "cout << \" This \";\n",
-    "cout << \"is a \";\n",
-    "cout << \"sentence \" << endl;\n",
-    "cout << \" This \"<< endl << \"is a \"<< endl<< \"sentence \" << endl;\n",
-    "~~~\n",
-    "- Output strings are enclosed in quotes -- can you find out how to print a quote?\n",
-    "- Special characters are preceded by a backslash -- find out what `\\r`, `\\n`, `\\b` and `\\\\` do to the output?\n",
-    "- What is the difference between `\\n` and `endl`?\n",
-    "\n",
-    "## Solutions"
+    "## Code from Demo 1.1:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0498765b",
+   "id": "547afb21",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " This is a sentence \n",
-      " This \n",
-      "is a \n",
-      "sentence \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#include <iostream>\n",
-    "using namespace std;\n",
-    "\n",
-    "{\n",
-    "    cout << \" This \";\n",
-    "    cout << \"is a \";\n",
-    "    cout << \"sentence \" << endl;\n",
-    "    cout << \" This \"<< endl << \"is a \"<< endl<< \"sentence \" << endl;\n",
-    "}"
+    "#include <cmath>\n",
+    "using namespace std;"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "260f67f9",
+   "id": "dbc05379",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Use backslash \\\" to print a \"quote\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "\n",
+    "double normalDistribution_int(double x,int N)\n",
     "{\n",
-    "    cout << \"Use backslash \\\\\\\" to print a \\\"quote\\\"\" << endl;\n",
+    "  if(x<-10.)return 0.;\n",
+    "  if(x>10.)return 1.;\n",
+    "  // range of integration\n",
+    "  double a=0,b=x;\n",
+    "  // local variables\n",
+    "  double s,h,sum=0.;\n",
+    "  // inialise the variables\n",
+    "  h=(b-a)/N;\n",
+    "  // add in the first few terms\n",
+    "  sum = sum + exp(-a*a/2.) + 4.*exp(-(a+h)*(a+h)/2.);\n",
+    "  // and the last one\n",
+    "  sum = sum + exp(-b*b/2.);\n",
+    "  // loop over terms 2 up to N-1\n",
+    "  for(int i=1;i<N/2;i++)\n",
+    "  {\n",
+    "    s = a + 2*i*h;\n",
+    "    sum = sum + 2.*exp(-s*s/2.);\n",
+    "    s = s + h;\n",
+    "    sum = sum + 4.*exp(-s*s/2.);\n",
+    "  }\n",
+    "  // complete the integral\n",
+    "  sum = 0.5 + h*sum/3./sqrt(8.*atan(1.));\n",
+    "  // return result\n",
+    "  return sum;\n",
     "}"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e741ff64",
+   "id": "719d8617",
    "metadata": {},
    "source": [
-    "We can use `\\n` to start a new line. The difference between this and `endl` is that the latter adds a _flush_ command to send the buffer immediately to screen."
+    "## Tasks\n",
+    "\n",
+    "- Test your code by outputting some values of $N(x)$ for $x$ in the range $[-10,10].$\n",
+    "- Try varying the number of steps in the integration, what happens for very small or very large numbers?\n",
+    "- Try using a polynomial approximation to $N(x)$ (less than single precision!): $$ N(x)= 1-N'(x)(a_1 k+a_2 k^2+a_3 k^3), \\quad x\\geq 0,$$ $$N(x)=1-N(-x),\\quad x<0.$$ Here $k=\\frac{1}{1+\\gamma x}$, $\\gamma=0.33267$, $a_1=0.43618$,\n",
+    "$a_2=-0.12017$, and $a_3=0.93730$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1488608",
+   "metadata": {},
+   "source": [
+    "Check out the value at a few points:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6998dd23",
+   "id": "10327278",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "End this line now\n",
-      "Another line\n",
-      "And another\n"
+      "0.5\n",
+      "0.841345\n",
+      "0.97725\n",
+      "0.99865\n",
+      "0.999968\n",
+      "1\n"
      ]
     }
    ],
    "source": [
     "{\n",
-    "    cout << \"End this line now\\n\";\n",
-    "    cout << \"Another line\\n\";\n",
-    "    cout << \"And another\" << endl;\n",
+    "    cout << normalDistribution_int(0,128) << endl;\n",
+    "    cout << normalDistribution_int(1,128) << endl;\n",
+    "    cout << normalDistribution_int(2,128) << endl;\n",
+    "    cout << normalDistribution_int(3,128) << endl;\n",
+    "    cout << normalDistribution_int(4,128) << endl;\n",
+    "    cout << normalDistribution_int(5,128) << endl;\n",
     "}"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3b3ad09b",
+   "id": "f6a91e70",
    "metadata": {},
    "source": [
-    "The return carriage moves back to the start of a line, overwriting previously entered characters. "
+    "Now run the function with increasing values of $n$, notice that the value stops changing when the value of $n$ gets large, seeming that the solution has converged."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0d7e709d",
+   "id": "7940a4be",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "End this line here\r",
-      "  art    \r",
-      "St\n"
+      "2 0.841529\n",
+      "4 0.841355\n",
+      "8 0.841345\n",
+      "16 0.841345\n",
+      "32 0.841345\n",
+      "64 0.841345\n",
+      "128 0.841345\n",
+      "256 0.841345\n",
+      "512 0.841345\n",
+      "1024 0.841345\n",
+      "2048 0.841345\n",
+      "4096 0.841345\n"
      ]
     }
    ],
    "source": [
-    "{\n",
-    "    cout << \"End this line here\\r\";\n",
-    "    cout << \"  art    \\r\";\n",
-    "    cout << \"St\" << endl;\n",
-    "}"
+    "for(int n=2;n<=5000;n*=2)\n",
+    "    cout << n << \" \" << normalDistribution_int(1,n) << endl;"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2da90afb",
+   "id": "73dd0a7d",
    "metadata": {},
    "source": [
-    "Use a backspace `\\b` to move back one character."
+    "Now we implement the polynomial function approximation as given:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "54e31bce",
+   "id": "67ce0c44",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Write somethink\bg"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "double normalDistribution_poly(double x)\n",
     "{\n",
-    "    cout << \"Write somethink\";\n",
-    "    cout << \"\\bg\";\n",
+    "    double gmm=0.33267;\n",
+    "    double a1=0.43618;\n",
+    "    double a2=-0.12017;\n",
+    "    double a3=0.93730;\n",
+    "    double k=1/(1+gmm*x);\n",
+    "    double Ndash = exp(-x*x/2.)/sqrt(8.*atan(1.));\n",
+    "    if(x>=0.)return 1.-Ndash*((a3*k+a2)*k+a1)*k;\n",
+    "    else return Ndash*((a3*k+a2)*k+a1)*k;\n",
     "}"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2e78c736",
+   "id": "8155e2a5",
    "metadata": {},
    "source": [
-    "Use `\\\\` to output a backslash to screen."
+    "Notice that the solution is similar but there is clearly an error of the order $10^{-4}$ in places."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "acebec35",
+   "id": "9c2360f4",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Write a backslash \\ like this \"\\\\\""
+      "0.500002\n",
+      "0.841352\n",
+      "0.977241\n",
+      "0.998645\n",
+      "0.999968\n",
+      "1\n"
      ]
     }
    ],
    "source": [
     "{\n",
-    "    cout << \"Write a backslash \\\\ like this \\\"\\\\\\\\\\\"\";\n",
+    "    cout << normalDistribution_poly(0) << endl;\n",
+    "    cout << normalDistribution_poly(1) << endl;\n",
+    "    cout << normalDistribution_poly(2) << endl;\n",
+    "    cout << normalDistribution_poly(3) << endl;\n",
+    "    cout << normalDistribution_poly(4) << endl;\n",
+    "    cout << normalDistribution_poly(5) << endl;\n",
     "}"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4ca0f40a",
+   "id": "9c1efd87",
    "metadata": {},
    "source": [
-    "As stated above, the `endl` command flushes the current buffer to screen and puts an end to the last line. So you will only see the difference if you do something inbetween writing the buffer and displaying on screen, which is a relatively rare occurence."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b23ae191",
-   "metadata": {},
-   "source": [
-    "## Tasks \n",
-    "\n",
-    "- Try doing some simple calculations with integers and doubles. Work out $$ \\frac{a}{x} + bx \n",
-    "$$ $$ ax^2 + bx + c $$ $$ \\frac{a + b*x}{c^4} $$ where $$ a = 1.17745, \\quad b=3, \\quad c=-1004.1, \\text{ and } x = 24.539~. $$ Use brackets to order the calculations. Try declaring the variables $a$, $b$, $c$ and $x$ as int, float or double -- what difference does it make to the solution?\n",
-    "- Now include the `cmath` library in your program. Calculate:-\n",
-    "\t$$\n",
-    "\t\\frac{\\sin(ax)}{x} \n",
-    "\t$$\n",
-    "\t$$\n",
-    "\t\\sum_{i=1}^5 (a + bx)^i\n",
-    "\t$$\n",
-    "\t$$\n",
-    "\t\\sqrt{\\sin(e^{x^a})}\n",
-    "\t$$\n",
-    "\twhere\n",
-    "\t$$\n",
-    "\ta = 1.17745, \\quad b=3, \\quad c=-1004.1, \\text{ and } x = 24.539~.\n",
-    "\t$$\n",
-    "\tThe functions you will need are `sqrt`, `sin`, `cos`, `exp` and , `pow`. Look them up if required. What happens to the result of the top expression if $x=0$?. \n",
-    "\n",
-    "## Solutions"
+    "## Code from Demo 1.2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "efc64795",
+   "id": "2cbc6e4e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "73.665\n",
-      "-896.462\n",
-      "7.35803e-11\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "{\n",
-    "    double a=1.17745;\n",
-    "    double b=3.;\n",
-    "    double c=-1004.1;\n",
-    "    double x=24.539;\n",
-    "    cout << a/x + b*x <<endl;\n",
-    "    cout << a*a*x + b*x + c <<endl;\n",
-    "    cout << (a+ b*x)/c/c/c/c <<endl;\n",
-    "}"
+    "#include <iomanip>\n",
+    "#include <chrono>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "07672099",
+   "id": "4689a20d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-0.0236486\n",
-      "2.37243e+09\n",
-      "0.827972\n"
+      "5.26988e+10\n",
+      " Total time elapsed for 1.1e+06 calculations is 0.0493652\n"
      ]
     }
    ],
    "source": [
-    "#include <cmath>\n",
-    "\n",
     "{\n",
-    "    double a=1.17745;\n",
-    "    double b=3.;\n",
-    "    double c=-1004.1;\n",
-    "    double x=24.539;\n",
-    "    cout << sin(a*x)/x <<endl;\n",
-    "    double temp = a+b*x;\n",
-    "    double sum = temp + temp*temp + pow(temp,3) + pow(temp,4) + pow(temp,5);\n",
-    "    cout << sum <<endl;\n",
-    "    cout << sqrt( sin( exp( pow(x,a) ) ) ) <<endl;\n",
+    "  int N=100000;\n",
+    "  // get start time\n",
+    "  auto start = std::chrono::steady_clock::now(); \n",
+    "  // code in here is timed\n",
+    "  double sum=0.;\n",
+    "  for(int i=0;i<N;i++)\n",
+    "  {\n",
+    "    for(int x=-5;x<=5;x++)\n",
+    "      sum = sum + normalDistribution_poly(x);\n",
+    "  }\n",
+    "  cout << sum << endl;\n",
+    "  // get finish time\n",
+    "  auto finish = std::chrono::steady_clock::now();\n",
+    "  // convert into real time in seconds\n",
+    "  auto elapsed = std::chrono::duration_cast<std::chrono::duration<double> >(finish - start);\n",
+    "  // output values\n",
+    "  cout << \" Total time elapsed for \"; \n",
+    "  cout << 11.*N << \" calculations is \" << elapsed.count() << endl;\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f9300fc",
+   "metadata": {},
+   "source": [
+    "## Tasks\n",
+    "\n",
+    "- Test the efficiency of your calculation for $N(x)$ against the polynomial approximation -- which method is the best one?\n",
+    "- Try using the standard library error function `erfc`, how does this compare to other methods?\n",
+    "- Go through the solutions for the Black-Scholes equation -- note solution codes are provided for all options.\n",
+    "\n",
+    "## Solutions\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4113db16",
+   "metadata": {},
+   "source": [
+    "Now try the integral approximation `normalDistibution_int` with $n=128$ steps in the integration and run it $N=100000$ times. Choosing higher values than this may mean waiting a long time!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "463ddda3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "550000\n",
+      " Total time elapsed for 1.1e+06 calculations is 1.80702\n"
+     ]
+    }
+   ],
+   "source": [
+    "{\n",
+    "  int N=100000;\n",
+    "  // get start time\n",
+    "  auto start = std::chrono::steady_clock::now(); \n",
+    "  // code in here is timed\n",
+    "  double sum=0.;\n",
+    "  for(int i=0;i<N;i++)\n",
+    "  {\n",
+    "    for(int x=-5;x<=5;x++)\n",
+    "      sum = sum + normalDistribution_int(x,128);\n",
+    "  }\n",
+    "  cout << sum << endl;\n",
+    "  // get finish time\n",
+    "  auto finish = std::chrono::steady_clock::now();\n",
+    "  // convert into real time in seconds\n",
+    "  auto elapsed = std::chrono::duration_cast<std::chrono::duration<double> >(finish - start);\n",
+    "  // output values\n",
+    "  cout << \" Total time elapsed for \"; \n",
+    "  cout << 11.*N << \" calculations is \" << elapsed.count() << endl;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76d07a96",
+   "metadata": {},
+   "source": [
+    "The results for the integration are more accurate, but take longer to calculate. So clearly we need to measure the trade off between accuracy and speed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2cdd6575",
+   "metadata": {},
+   "source": [
+    "Now try the standard library function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f2956f6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "double normalDistribution_std(double x)\n",
+    "{\n",
+    "    return 0.5*erfc(-x/sqrt(2.));\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c549386",
+   "metadata": {},
+   "source": [
+    "Check we've done the transformation correctly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "23c730dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5\n",
+      "0.841345\n",
+      "0.97725\n",
+      "0.99865\n",
+      "0.999968\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "{\n",
+    "    cout << normalDistribution_std(0) << endl;\n",
+    "    cout << normalDistribution_std(1) << endl;\n",
+    "    cout << normalDistribution_std(2) << endl;\n",
+    "    cout << normalDistribution_std(3) << endl;\n",
+    "    cout << normalDistribution_std(4) << endl;\n",
+    "    cout << normalDistribution_std(5) << endl;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7604ce9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "550000\n",
+      " Total time elapsed for 1.1e+06 calculations is 0.0486397\n"
+     ]
+    }
+   ],
+   "source": [
+    "{\n",
+    "  int N=100000;\n",
+    "  // get start time\n",
+    "  auto start = std::chrono::steady_clock::now(); \n",
+    "  // code in here is timed\n",
+    "  double sum=0.;\n",
+    "  for(int i=0;i<N;i++)\n",
+    "  {\n",
+    "    for(int x=-5;x<=5;x++)\n",
+    "      sum = sum + normalDistribution_std(x);\n",
+    "  }\n",
+    "  cout << sum << endl;\n",
+    "  // get finish time\n",
+    "  auto finish = std::chrono::steady_clock::now();\n",
+    "  // convert into real time in seconds\n",
+    "  auto elapsed = std::chrono::duration_cast<std::chrono::duration<double> >(finish - start);\n",
+    "  // output values\n",
+    "  cout << \" Total time elapsed for \"; \n",
+    "  cout << 11.*N << \" calculations is \" << elapsed.count() << endl;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e8883c5",
+   "metadata": {},
+   "source": [
+    "Ok, so this is just as fast as the polynomial approximation but easier to write and accurate to machine precision -- we have a winner!"
    ]
   }
  ],
